seeds command changed in package.json, server running without routes

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "seeds" : "mongo < seeds.js",
+    "seeds" : "mongo < ./db/seeds.js",
     "start" : "node server.js",
     "server:dev" : "nodemon server.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
