--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-globe": "^5.0.2",
+    "react-globe.gl": "^2.19.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.135.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
